Fix uneven paddings

--- a/less/content.less
+++ b/less/content.less
@@ -128,7 +128,7 @@ iframe {
 .info {
 	font-size: @font-size-small;
 	margin: 1em 0;
-	padding: .65em .8em .5em .8em;
+	padding: .65em .8em;
 	border: 1px solid @text-color;
 	border-radius: @border-radius-size;
 }
@@ -148,7 +148,7 @@ form {
 		line-height: @line-height-small;
 		color: @text-color;
 		max-width: 100%;
-		padding: .65em .8em .5em .8em;
+		padding: .65em .8em;
 		border: 1px solid @text-color-light;
 		&:focus,
 		&:focus {
