--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,7 +3,7 @@
 	background-color: transparent;
 	border: 2px solid @accent-color;
 	border-radius: @border-radius-size;
-	padding: .45em .8em .3em .8em;
+	padding: .45em .8em;
 	color: @accent-color;
 	font-weight: @font-weight-normal;
 	&:hover, &:focus:hover {
